<resources>
    <string name="app_name">FrontPeople</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="todo">TODO</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="make_request">Make Request</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_image"><u>Choose Image</u></string>
</resources>